Fixes for 7.x